metadata/force-app/main/default/objects/CustomName_FHqEo__c/CustomName_FHqEo__c.object-meta.xml
<CustomObject>
    <description>Description_MdCPB</description>
    <label>CustomLabel_gHqii</label>
    <nameField>
        <label>CustomLabel_gHqii</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_gHqiis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>