metadata/force-app/main/default/objects/CustomName_FHqEo__c/fields/CustomField_arQkP__c.field-meta.xml
<CustomField>
    <fullName>CustomField_arQkP__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldgOKwR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>