metadata/force-app/main/default/objects/CustomName_FHqEo__c/fields/CustomField_iNUKQ__c.field-meta.xml
<CustomField>
    <fullName>CustomField_iNUKQ__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldEjAsK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>